--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,6 +12,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "pg": "^8.13.1"
+    "jest": "^29.7.0",
+    "pg": "^8.13.1",
+    "slugify": "^1.6.6",
+    "supertest": "^7.0.0"
   }
 }
